objects/OF_ElencoComuniItaliani__c.object
<CustomObject>
    <fields>
        <fullName>OF_CodiceIstat__c</fullName>
        <externalId>true</externalId>
        <label>Codice Istat</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <label>Comune</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Regione__c</fullName>
        <label>Regione</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Ripartizionegeografica__c</fullName>
        <label>Ripartizione geografica</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Ripartizione_geografica_NC__c</fullName>
        <label>Ripartizione geografica NC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Titolarit_NC__c</fullName>
        <label>Titolarità NC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>ElencoComuniItaliani</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OF_Regione__c</columns>
        <columns>OF_Provincia__c</columns>
        <columns>OF_Comune__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ISTAT-{000000}</displayFormat>
        <label>ISTAT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ElenchiComuniItaliani</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>